--- a/block-BHaabd/index.html
+++ b/block-BHaabd/index.html
@@ -5,3 +5,60 @@
 
 - Using CSS resets is necessary.
 - Use semantic tags and keep the nesting and indentation proper. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- title of the page -->
+    <title>Our Cats</title>
+    <!-- linking stylesheet -->
+    <link rel="stylesheet" href="./assets/stylesheet/style.css">
+    <!-- linking font family tinos and arimo-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Arimo&family=Tinos&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- header of the page -->
+    <div class="header">
+        <header>
+            <h1>Extracts from "Our Cats, by Harrison Weir"</h1>
+        </header>
+    </div>
+    <!-- main content of the page -->
+    <main class="white clearfix">
+        <div class="left coloumn">
+            <aside>
+                <h4>Introductory</h4>
+                <h4>The First Cat Show</h4>
+                <h4>Habits</h4>
+                <h4>Trained Cats</h4>
+                <h4>Usefulness of Cats</h4>
+            </aside>
+        </div>
+        <div class="middle coloumn">
+            <article>
+                <h2>Usefulness of Cats</h2>
+                <div class="image">
+                    <img src="./assets/media/z160.jpg" alt="sketch of a cat">
+                </div>
+                <div class="para">
+                    <p>In our urban and suburban houses what should we do without cats? In our sitting or bedrooms, our libraries, in our kitchens and storerooms, our farms, barns, and rickyards, in our docks, our granaries, our ships, and our wharves, in our corn markets, meat markets, and other places too numerous to mention, how useful they are! In our ships, however, the rats oft set them at defiance; still they are of great service.</p>
+                    <p>How wonderfully patient is the cat when watching for rats or mice, awaiting their egress from their place of refuge or that which is their home! How well Shakespeare in Pericles, Act iii., describes this keen attention of the cat to its natural pursuit!</p>
+                    <p class="small">The cat, with eyne of burning coal, Now crouches from (before) the mouse's hole.</p>
+                    <p>A slight rustle, and the fugitive comes forth; a quick, sharp, resolute motion, and the cat has proved its usefulness. Let any one have a plague of rats and mice, as I once had, and let them be delivered therefrom by cats, as I was, and they will have a lasting and kind regard for them.</p>
+
+                </div>
+
+            </article>
+        </div>
+        <div class="right coloumn">
+            <aside>
+                <h3>Let any one have a plague of rats and mice, as I once had, and let them be delivered therefrom by cats, as I was, and they will have a lasting and kind regard for them.</h3>
+            </aside>
+        </div>
+    </main>
+    <!-- footer of the page-->
+    <footer></footer>
+</body>
+</html>
