--- a/block-BHaabg/index.html
+++ b/block-BHaabg/index.html
@@ -13,3 +13,78 @@
 6. After the gallery section footer will come.
 
 7. Take a circular button at the right bottom corner of the page and keep its position fixed. The button should always take to the top of the page once clicked. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- title of the page -->
+    <title>Uniqely Positioning</title>
+    <!-- linking stylesheet -->
+    <link rel="stylesheet" href="./assets/stylesheet/style.css">
+    <!-- linking font family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
+</head>
+<body id="top">
+    <!-- header starts here -->
+    <header>
+        <div class="header clearfix">
+            <h1 class="left">Ray-Ban</h1>
+            <nav class="right">   
+                <a href="#">HOME</a>
+                <a href="#">AVIATORS</a>
+                <a href="#">STORES</a>
+                <a href="#">CONTACT</a>
+            </nav>
+        </div>
+    </header>
+    <!-- main content of the page -->
+    <main>
+        <section>
+            <article class="clearfix">
+                <div class="coloumn half">
+                    <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde est ad accusamus voluptatem totam sapiente delectus accusantium cupiditate eveniet voluptatum a, blanditiis tempora ab magnam sed fugit fuga. Qui, expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam nostrum aspernatur omnis voluptatum repellat aut laboriosam maiores eos odio, veniam iste explicabo, optio esse ab nihil aliquam, provident consectetur rem?</p>
+                </div>
+                <div class="coloumn half">
+                    <img src="./assets/media/abazie-uchenna-vxcDECnz4so-unsplash.jpg" alt="man wearing glasses">
+                </div>
+            </article>
+        </section>
+        <section>
+            <div class="row clearfix">
+                <div class="coloumn image">
+                    <img src="./assets/media/adam-thomas-3Npd9GJEKrE-unsplash.jpg" alt="sunglasses">
+                </div>
+                <div class="coloumn image">
+                    <img src="./assets/media/amber-ahrens-D--SZxc7CuE-unsplash.jpg" alt="sunglasses">
+                </div>
+                <div class="coloumn image">
+                    <img src="./assets/media/daniel-lincoln-SttmdhoyRlk-unsplash.jpg" alt="sunglasses">
+                </div>
+            </div>
+            <div class="row clearfix">
+                <div class="coloumn image">
+                    <img src="./assets/media/ethan-robertson-SYx3UCHZJlo-unsplash.jpg" alt="sunglasses">
+                </div>
+                <div class="coloumn image">
+                    <img src="./assets/media/joey-nicotra-VDZAcY54cig-unsplash.jpg" alt="sunglasses">
+                </div>
+                <div class="coloumn image">
+                    <img src="./assets/media/varvara-grabova-EM7QObn-zAs-unsplash.jpg" alt="sunglasses">
+                </div>
+            </div>
+        </section>
+        <button>
+            <div class="button">
+                <a href="#top">Top</a>
+            </div>
+        </button>
+    </main>
+    <!-- footer starts here -->
+    <footer>
+
+    </footer>
+</body>
+</html>
