--- a/block-BHaabh/index.html
+++ b/block-BHaabh/index.html
@@ -14,7 +14,7 @@
     <!-- title of the page -->
     <title>Positioning 2</title>
     <!-- linking stylesheet -->
-    <link rel="stylesheet" href="./assets/stlesheet/style.css">
+    <link rel="stylesheet" href="./assets/stylesheet/style.css">
     <!-- linking font family -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,300;0,400;1,100&display=swap" rel="stylesheet">
     <!-- linking font-awesome -->
